--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@
   height: 102px;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
-  font-size: 40px;
+  font-size: 36px;
+  font-weight: 700;
   color: black;
 }
 .right input {
@@ -72,7 +73,8 @@
   height: 102px;
   border: 1px solid #e5e5e5;
   border-radius: 3px;
-  font-size: 40px;
+  font-size: 36px;
+  font-weight: 700;
   color: black;
 }
 .left_input_div {
@@ -80,9 +82,9 @@
 }
 .left_input_div p {
   position: absolute;
-  margin-bottom: -10px;
-  margin-top: 85px;
-  margin-left: 5px;
+  margin-top: 80px;
+  margin-left: 15px;
+  font-size: 12px;
 }
 .left_input_div input {
   position: absolute;
@@ -92,9 +94,9 @@
 }
 .right_input_div p {
   position: absolute;
-  margin-bottom: -10px;
-  margin-top: 85px;
-  margin-left: 5px;
+  margin-top: 80px;
+  margin-left: 15px;
+  font-size: 12px;
 }
 .right_input_div input {
   position: absolute;
